--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formBuilder": "^3.19.13",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -24,5 +27,10 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "vite": "^6.0.1"
+  },
+  
+  "resolutions": {
+    "jquery": "^3.6.0"
   }
+
 }
